test/variable/use_false_as_var.lox
// error: expect variable name
var false = "value"
